--- a/auth-master/package.json
+++ b/auth-master/package.json
@@ -11,6 +11,7 @@
     "react": "16.0.0-alpha.12",
     "react-addons-update": "^15.6.0",
     "react-native": "0.47.1",
+    "react-native-vector-icons": "^4.3.0",
     "react-native-fontawesome": "^5.7.0",
     "react-native-swiper": "^1.5.5",
     "react-redux": "^3.1.2",
