--- a/auth-master/package.json
+++ b/auth-master/package.json
@@ -12,6 +12,7 @@
     "react-addons-update": "^15.6.0",
     "react-native": "0.47.1",
     "react-native-fontawesome": "^5.7.0",
+    "react-native-router-flux": "^4.0.0-beta.17",
     "react-native-swiper": "^1.5.5",
     "react-native-vector-icons": "^4.3.0",
     "react-redux": "^5.0.6",
