--- a/auth-master/package.json
+++ b/auth-master/package.json
@@ -26,6 +26,7 @@
     "babel-jest": "20.0.3",
     "babel-preset-react-native": "2.1.0",
     "jest": "20.0.4",
+    "react": "^16.0.0-alpha.12",
     "react-test-renderer": "16.0.0-alpha.12"
   },
   "jest": {
