--- a/auth-master/package.json
+++ b/auth-master/package.json
@@ -17,6 +17,7 @@
     "react-native-router-flux": "^4.0.0-beta.17",
     "react-native-swiper": "^1.5.5",
     "react-native-vector-icons": "^4.3.0",
+    "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-form": "^5.3.2",
