--- a/auth-master/package.json
+++ b/auth-master/package.json
@@ -14,6 +14,7 @@
     "react-native-camera": "^0.10.0",
     "react-native-fontawesome": "^5.7.0",
     "react-native-maps": "^0.16.0",
+    "react-native-photos-framework": "^1.0.7",
     "react-native-router-flux": "^4.0.0-beta.17",
     "react-native-swiper": "^1.5.5",
     "react-native-vector-icons": "^4.3.0",
