--- a/auth-master/ios/KaChing.xcodeproj/xcshareddata/xcschemes/KaChing-tvOS.xcscheme
+++ b/auth-master/ios/KaChing.xcodeproj/xcshareddata/xcschemes/KaChing-tvOS.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-               BuildableName = "todoListAuth2-tvOS.app"
-               BlueprintName = "todoListAuth2-tvOS"
-               ReferencedContainer = "container:todoListAuth2.xcodeproj">
+               BuildableName = "KaChing-tvOS.app"
+               BlueprintName = "KaChing-tvOS"
+               ReferencedContainer = "container:KaChing.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "todoListAuth2-tvOSTests.xctest"
-               BlueprintName = "todoListAuth2-tvOSTests"
-               ReferencedContainer = "container:todoListAuth2.xcodeproj">
+               BuildableName = "KaChing-tvOSTests.xctest"
+               BlueprintName = "KaChing-tvOSTests"
+               ReferencedContainer = "container:KaChing.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "todoListAuth2-tvOSTests.xctest"
-               BlueprintName = "todoListAuth2-tvOSTests"
-               ReferencedContainer = "container:todoListAuth2.xcodeproj">
+               BuildableName = "KaChing-tvOSTests.xctest"
+               BlueprintName = "KaChing-tvOSTests"
+               ReferencedContainer = "container:KaChing.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "todoListAuth2-tvOS.app"
-            BlueprintName = "todoListAuth2-tvOS"
-            ReferencedContainer = "container:todoListAuth2.xcodeproj">
+            BuildableName = "KaChing-tvOS.app"
+            BlueprintName = "KaChing-tvOS"
+            ReferencedContainer = "container:KaChing.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "todoListAuth2-tvOS.app"
-            BlueprintName = "todoListAuth2-tvOS"
-            ReferencedContainer = "container:todoListAuth2.xcodeproj">
+            BuildableName = "KaChing-tvOS.app"
+            BlueprintName = "KaChing-tvOS"
+            ReferencedContainer = "container:KaChing.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "todoListAuth2-tvOS.app"
-            BlueprintName = "todoListAuth2-tvOS"
-            ReferencedContainer = "container:todoListAuth2.xcodeproj">
+            BuildableName = "KaChing-tvOS.app"
+            BlueprintName = "KaChing-tvOS"
+            ReferencedContainer = "container:KaChing.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
