--- a/auth-master/ios/KaChing.xcodeproj/xcshareddata/xcschemes/KaChing.xcscheme
+++ b/auth-master/ios/KaChing.xcodeproj/xcshareddata/xcschemes/KaChing.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "todoListAuth2.app"
-               BlueprintName = "todoListAuth2"
-               ReferencedContainer = "container:todoListAuth2.xcodeproj">
+               BuildableName = "KaChing.app"
+               BlueprintName = "KaChing"
+               ReferencedContainer = "container:KaChing.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "todoListAuth2Tests.xctest"
-               BlueprintName = "todoListAuth2Tests"
-               ReferencedContainer = "container:todoListAuth2.xcodeproj">
+               BuildableName = "KaChingTests.xctest"
+               BlueprintName = "KaChingTests"
+               ReferencedContainer = "container:KaChing.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "todoListAuth2Tests.xctest"
-               BlueprintName = "todoListAuth2Tests"
-               ReferencedContainer = "container:todoListAuth2.xcodeproj">
+               BuildableName = "KaChingTests.xctest"
+               BlueprintName = "KaChingTests"
+               ReferencedContainer = "container:KaChing.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "todoListAuth2.app"
-            BlueprintName = "todoListAuth2"
-            ReferencedContainer = "container:todoListAuth2.xcodeproj">
+            BuildableName = "KaChing.app"
+            BlueprintName = "KaChing"
+            ReferencedContainer = "container:KaChing.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "todoListAuth2.app"
-            BlueprintName = "todoListAuth2"
-            ReferencedContainer = "container:todoListAuth2.xcodeproj">
+            BuildableName = "KaChing.app"
+            BlueprintName = "KaChing"
+            ReferencedContainer = "container:KaChing.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "todoListAuth2.app"
-            BlueprintName = "todoListAuth2"
-            ReferencedContainer = "container:todoListAuth2.xcodeproj">
+            BuildableName = "KaChing.app"
+            BlueprintName = "KaChing"
+            ReferencedContainer = "container:KaChing.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
