--- a/auth-master/package.json
+++ b/auth-master/package.json
@@ -12,6 +12,7 @@
     "react-addons-update": "^15.6.0",
     "react-native": "0.47.1",
     "react-native-camera": "^0.10.0",
+    "react-native-camera-roll-picker": "^1.2.0",
     "react-native-fontawesome": "^5.7.0",
     "react-native-maps": "^0.16.0",
     "react-native-photos-framework": "^1.0.7",
