--- a/authServerBoilerplate 2/package.json
+++ b/authServerBoilerplate 2/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -20,5 +21,8 @@
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
     "uuid": "^3.1.0"
+  },
+  "engines": {
+    "node": "6.10.1"
   }
 }
